--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -52,12 +52,12 @@ jobs:
       - name: TEST (DELETEME)
         shell: pwsh
         env:
-          32BIT: ${{ matrix.arch == 32 }}
+          ARCH_X86: ${{ matrix.arch == 32 }}
           MAKE_DOCS: ${{ matrix.documentation }}
         run: |
-          echo $(if ($Env:32BIT) {"-DCMAKE_TOOLCHAIN_FILE=$Env:VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake "
-                                  "-DVCPKG_TARGET_TRIPLET=x86-linux "
-                                  "-DPhysFS_PREFER_FIND_PACKAGE=ON"})
+          echo $(if ($Env:ARCH_X86) {"-DCMAKE_TOOLCHAIN_FILE=$Env:VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake "
+                                     "-DVCPKG_TARGET_TRIPLET=x86-linux "
+                                     "-DPhysFS_PREFER_FIND_PACKAGE=ON"})
           echo $Env:MAKE_DOCS
           exit 1
 
