AAHHHHHH HOW COULD I FORGET

--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -155,7 +155,7 @@ jobs:
           # Pass -DPhysFS_PREFER_FIND_PACKAGE=ON because we use
           # vcpkg for physfs for 32bit
           & cmake .. -DCMAKE_BUILD_TYPE=$Env:BUILD_TYPE `
-                     $(if ($Env:32BIT == "true") {
+                     $(if ($Env:32BIT -eq "true") {
                        "-DCMAKE_TOOLCHAIN_FILE=$Env:VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake "
                        "-DVCPKG_TARGET_TRIPLET=x86-linux "
                        "-DPhysFS_PREFER_FIND_PACKAGE=ON"
