--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -143,7 +143,7 @@ jobs:
         env:
           BUILD_TYPE: ${{ matrix.build_type }}
           32BIT: ${{ matrix.arch == 32 }}
-          MAKE_DOCS: ${{ matrix.documentation }}
+          MAKE_DOCS: ${{ matrix.documentation == ON && 'ON' || 'OFF' }}
           GLBINDING: ${{ matrix.glbinding }}
           TESTS: ${{ matrix.os == 'ubuntu-20.04' }}
         run: |
@@ -204,7 +204,7 @@ jobs:
         working-directory: build
         run: ../.ci_scripts/package.sh
 
-      - name: "Run slugify"
+      - name: Run slugify
         id: slugify
         uses: eltimn/slugify-action@v2.0.2
 
