--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -154,16 +154,16 @@ jobs:
 
           # Pass -DPhysFS_PREFER_FIND_PACKAGE=ON because we use
           # vcpkg for physfs for 32bit
-          & cmake .. -DCMAKE_BUILD_TYPE=$Env:BUILD_TYPE -DENABLE_DISCORD=ON `
-                     -DCMAKE_INSTALL_MESSAGE=NEVER -DCMAKE_INSTALL_PREFIX=/usr `
+          & cmake .. "-DCMAKE_BUILD_TYPE=$Env:BUILD_TYPE -DENABLE_DISCORD=ON " `
+                     "-DCMAKE_INSTALL_MESSAGE=NEVER -DCMAKE_INSTALL_PREFIX=/usr " `
                      $(if ($Env:32BIT -eq "true") {
                        "-DCMAKE_TOOLCHAIN_FILE=$Env:VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake "
                        "-DVCPKG_TARGET_TRIPLET=x86-linux "
                        "-DPhysFS_PREFER_FIND_PACKAGE=ON"
                      }) `
-                     -DBUILD_DOCUMENTATION=$(if ($Env:MAKE_DOCS -eq "true") {"ON"} else {"OFF"}) `
-                     -DCMAKE_CXX_FLAGS="$(if ($Env:32BIT -eq "true") {"-m32"})" `
-                     -DCMAKE_C_FLAGS="$(if ($Env:32BIT -eq "true") {"-m32"})" `
+                     "-DBUILD_DOCUMENTATION=$(if ($Env:MAKE_DOCS -eq "true") {"ON"} else {"OFF"})" `
+                     "-DCMAKE_CXX_FLAGS=`"$(if ($Env:32BIT -eq "true") {"-m32"})`"" `
+                     "-DCMAKE_C_FLAGS=`"$(if ($Env:32BIT -eq "true") {"-m32"})`""
 
       - name: Build and install
         working-directory: build
