--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -162,8 +162,8 @@ jobs:
                        "-DPhysFS_PREFER_FIND_PACKAGE=ON"
                      }) `
                      "-DBUILD_DOCUMENTATION=$(if ($Env:MAKE_DOCS -eq "true") {"ON"} else {"OFF"})" `
-                     "-DCMAKE_CXX_FLAGS=`"$(if ($Env:32BIT -eq "true") {"-m32"})`"" `
-                     "-DCMAKE_C_FLAGS=`"$(if ($Env:32BIT -eq "true") {"-m32"})`""
+                     -DCMAKE_CXX_FLAGS=`"$(if ($Env:32BIT -eq "true") {"-m32"})`" `
+                     -DCMAKE_C_FLAGS=`"$(if ($Env:32BIT -eq "true") {"-m32"})`"
 
       - name: Build and install
         working-directory: build
@@ -209,7 +209,7 @@ jobs:
         uses: eltimn/slugify-action@v2.0.2
 
       - name: Upload AppImage
-        if: matrix.build_type != 'Debug' && matrix.glbinding == 'OFF'
+        if: matrix.build_type != 'Debug'
         uses: actions/upload-artifact@v4
         with:
           name: "${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.compiler }}-${{ steps.slugify.outputs.branch }}-${{ steps.slugify.outputs.sha }}-${{ matrix.build_type }}-appimage"
