--- a/clickable.yaml
+++ b/clickable.yaml
@@ -8,12 +8,12 @@ dependencies_target:
   - "libopenal-dev"
   - "libsdl2-dev"
   - "libsdl2-image-dev"
-  - "libfreetype6-dev"
+  - "libsdl2-ttf-dev"
+  - "libphysfs-dev"
   - "libcurl4-openssl-dev"
-  - "libharfbuzz-dev"
-  - "libfribidi-dev"
   - "libglm-dev"
   - "zlib1g-dev"
+  - "libfmt-dev"
 install_lib:
   - "/usr/lib/${ARCH_TRIPLET}/libogg.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libvorbis.so*"
@@ -23,10 +23,9 @@ install_lib:
   - "/usr/lib/${ARCH_TRIPLET}/libSDL2-2.0.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libSDL2_image.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libSDL2_image-2.0.so*"
-  - "/usr/lib/${ARCH_TRIPLET}/libfreetype.so*"
+  - "/usr/lib/${ARCH_TRIPLET}/libSDL2_ttf.so*"
+  - "/usr/lib/${ARCH_TRIPLET}/libSDL2_ttf-2.0.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libcurl.so*"
-  - "/usr/lib/${ARCH_TRIPLET}/libharfbuzz.so*"
-  - "/usr/lib/${ARCH_TRIPLET}/libfribidi.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libasound.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libsndio.so*"
   - "/lib/${ARCH_TRIPLET}/libz.so.1.2.11"
