--- a/clickable.yaml
+++ b/clickable.yaml
@@ -13,7 +13,7 @@ dependencies_target:
   - "libcurl4-openssl-dev"
   - "libglm-dev"
   - "zlib1g-dev"
-  - "libfmt-dev"
+  - "libfmt-dev/noble-backports"
 install_lib:
   - "/usr/lib/${ARCH_TRIPLET}/libogg.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libvorbis.so*"
