--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -33,11 +33,9 @@ jobs:
       matrix:
         os: [macos-13]
         build_type: [Debug, Release]
-        glbinding: [ON, OFF]
         include:
           - os: macos-13
             build_type: Release
-            glbinding: OFF
             release: ON
 
     runs-on: ${{ matrix.os }}
@@ -53,9 +51,9 @@ jobs:
         run: |
           # Use GLM 1.0.0 as later versions don't build with clang
           HOMEBREW_NO_AUTO_UPDATE=1 brew install --formula ./mk/brew/glm.rb --build-from-source
-          brew install cmake googletest bash rename libogg libvorbis glew \
-                       openal-soft sdl2 sdl2_image sdl2_ttf freetype harfbuzz \
-                       fribidi glib gtk-doc glbinding@2 libraqm zlib
+          brew install cmake bash rename libogg libvorbis glew \
+                       openal-soft sdl2 sdl2_image sdl2_ttf \
+                       glib gtk-doc zlib physfs fmt
           brew link glbinding@2
 
           install_name_tool -change \
@@ -89,9 +87,7 @@ jobs:
           $CXX --version
           mkdir "build"
           cd "build"
-          # TODO add -DGLBINDING_ENABLED=$USE_GLBINDING
           cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE $ARCH -DBUILD_TESTS=ON       \
-                   -DWARNINGS=ON -DWERROR=ON -DGLBINDING_ENABLED=$GLBINDING    \
                    -DENABLE_DISCORD=ON -DCMAKE_INSTALL_MESSAGE=NEVER           \
                    -DCMAKE_INSTALL_PREFIX=/usr -DINSTALL_SUBDIR_BIN=bin        \
                    -DINSTALL_SUBDIR_SHARE=share/supertux2
@@ -116,10 +112,14 @@ jobs:
         working-directory: build
         run: ../.ci_scripts/package.sh
 
+      - name: Run slugify
+        id: slugify
+        uses: eltimn/slugify-action@v2.0.2
+
       - uses: actions/upload-artifact@v4
-        if: matrix.build_type != 'Debug' && matrix.glbinding == 'OFF'
+        if: matrix.build_type != 'Debug'
         with:
-          name: "${{ matrix.os }}-${{ matrix.build_type }}${{ matrix.glbinding == 'ON' && '-glbinding' || '' }}-dmg"
+          name: "${{ matrix.os }}-${{ matrix.build_type }}-${{ steps.slugify.outputs.branch }}-${{ steps.slugify.outputs.sha }}-dmg"
           path: build/upload/*.dmg
           if-no-files-found: ignore
 
