--- a/clickable.yaml
+++ b/clickable.yaml
@@ -3,9 +3,11 @@ framework: "ubuntu-sdk-20.04"
 builder: "cmake"
 build_dir: "build.clickable"
 image_setup:
+  env:
+    - BUILD_ARCH: $ARCH
   run:
-    - pwd
-    - ${PROJECT_DIR}/mk/clickable/get_fmt.sh
+    - wget ftp.debian.org/debian/pool/main/f/fmtlib/libfmt9_9.1.0+ds1-2_${BUILD_ARCH}.deb | sudo dpkg -i libfmt9_9.1.0+ds1-2_${BUILD_ARCH}.deb
+    - wget ftp.debian.org/debian/pool/main/f/fmtlib/libfmt-dev_9.1.0+ds1-2_${BUILD_ARCH}.deb | sudo dpkg -i libfmt-dev_9.1.0+ds1-2_${BUILD_ARCH}.deb
 dependencies_target:
   - "libogg-dev"
   - "libvorbis-dev"
