--- a/mk/clickable/clickable-glew.yaml
+++ b/mk/clickable/clickable-glew.yaml
@@ -4,7 +4,7 @@ builder: "cmake"
 build_dir: "build.clickable"
 image_setup:
   env:
-    - BUILD_ARCH: $ARCH
+    BUILD_ARCH: $ARCH
   run:
     - wget ftp.debian.org/debian/pool/main/f/fmtlib/libfmt9_9.1.0+ds1-2_${BUILD_ARCH}.deb | sudo dpkg -i libfmt9_9.1.0+ds1-2_${BUILD_ARCH}.deb
     - wget ftp.debian.org/debian/pool/main/f/fmtlib/libfmt-dev_9.1.0+ds1-2_${BUILD_ARCH}.deb | sudo dpkg -i libfmt-dev_9.1.0+ds1-2_${BUILD_ARCH}.deb
