--- a/clickable.yaml
+++ b/clickable.yaml
@@ -6,8 +6,14 @@ image_setup:
   env:
     BUILD_ARCH: $ARCH
   run:
-    - wget ftp.debian.org/debian/pool/main/f/fmtlib/libfmt9_9.1.0+ds1-2_${BUILD_ARCH}.deb    && dpkg --force-all -i libfmt9_9.1.0+ds1-2_${BUILD_ARCH}.deb
-    - wget ftp.debian.org/debian/pool/main/f/fmtlib/libfmt-dev_9.1.0+ds1-2_${BUILD_ARCH}.deb && dpkg --force-all -i libfmt-dev_9.1.0+ds1-2_${BUILD_ARCH}.deb
+    - |
+      wget -O fmtlib.tar.gz https://github.com/fmtlib/fmt/archive/refs/tags/fmt-9.1.0.tar.gz
+      tar -xvzf fmtlib.tar.gz
+      cd fmt-9.1.0
+      mkdir build && cd build
+      cmake .. -DCMAKE_BUILD_TYPE=Release
+      cmake --build .
+      sudo cmake --install .
 dependencies_target:
   - "libogg-dev"
   - "libvorbis-dev"
