--- a/mk/clickable/clickable-glew.yaml
+++ b/mk/clickable/clickable-glew.yaml
@@ -6,7 +6,8 @@ image_setup:
   env:
     BUILD_ARCH: $ARCH
   run:
-    - wget -O fmtlib.tar.gz https://github.com/fmtlib/fmt/archive/refs/tags/fmt-9.1.0.tar.gz &&
+    - >
+      wget -O fmtlib.tar.gz https://github.com/fmtlib/fmt/archive/refs/tags/fmt-9.1.0.tar.gz &&
       tar -xvzf fmtlib.tar.gz &&
       cd fmt-9.1.0 &&
       mkdir build && cd build &&
