--- a/clickable.yaml
+++ b/clickable.yaml
@@ -7,7 +7,7 @@ image_setup:
     BUILD_ARCH: $ARCH
   run:
     # I don't know how to split this and honestly I don't care
-    - wget -O fmtlib.tar.gz https://github.com/fmtlib/fmt/archive/refs/tags/fmt-9.1.0.tar.gz && tar -xvzf fmtlib.tar.gz && cd fmt-9.1.0 && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release && cmake --build . && sudo cmake --install .
+    - wget -O fmtlib.tar.gz https://github.com/fmtlib/fmt/releases/download/9.1.0/fmt-9.1.0.zip && tar -xvzf fmtlib.tar.gz && cd fmt-9.1.0 && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release && cmake --build . && sudo cmake --install .
 dependencies_target:
   - "libogg-dev"
   - "libvorbis-dev"
