--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -55,9 +55,6 @@ jobs:
                        openal-soft sdl2 sdl2_image sdl2_ttf \
                        glib gtk-doc zlib physfs fmt
 
-          export PKG_CONFIG_PATH="/usr/local/opt/openal-soft/lib/pkgconfig:$PKG_CONFIG_PATH"
-          export PKG_CONFIG_PATH="/usr/local/opt/zlib/lib/pkgconfig:$PKG_CONFIG_PATH"
-
           install_name_tool -change \
             '@rpath/libsharpyuv.0.dylib' \
             /usr/local/opt/webp/lib/libsharpyuv.0.dylib \
@@ -83,7 +80,7 @@ jobs:
       - name: Configure build
         env:
           BUILD_TYPE: ${{ matrix.build_type }}
-          GLBINDING: ${{ matrix.glbinding }}
+          PKG_CONFIG_PATH: /usr/local/opt/openal-soft/lib/pkgconfig:/usr/local/opt/zlib/lib/pkgconfig
         run: |
           cmake --version
           $CXX --version
