--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -50,6 +50,22 @@ jobs:
           ./emsdk install latest
           ./emsdk activate latest
 
+      - name: Install dependencies
+        run: |
+          vcpkg integrate install
+          vcpkg install curl:wasm32-emscripten
+          vcpkg install glew:wasm32-emscripten
+          vcpkg install libogg:wasm32-emscripten
+          vcpkg install libvorbis:wasm32-emscripten
+          vcpkg install openal-soft:wasm32-emscripten
+          vcpkg install sdl2:wasm32-emscripten
+          vcpkg install sdl2-image:wasm32-emscripten
+          vcpkg install sdl2-ttf:wasm32-emscripten
+          vcpkg install glm:wasm32-emscripten
+          vcpkg install zlib:wasm32-emscripten
+          vcpkg install fmt:wasm32-emscripten
+          vcpkg install physfs:wasm32-emscripten
+
       - name: Configure build
         env:
           BUILD_TYPE: ${{ matrix.build_type }}
@@ -58,7 +74,9 @@ jobs:
           mkdir build
           cd build
           # TODO: Re-add -DWERROR=ON when warnings will be fixed
-          emcmake cmake -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DWARNINGS=ON ..
+          emcmake cmake .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DWARNINGS=ON \
+                           -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake \
+                           -DVCPKG_TARGET_TRIPLET=wasm32-emscripten
 
       - name: Sync data folder
         working-directory: build
