--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -50,12 +50,18 @@ jobs:
           ./emsdk install latest
           ./emsdk activate latest
 
+      - name: Use cached dependencies
+        id: cache-dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.VCPKG_INSTALLATION_ROOT }}/installed
+          key: ${{ runner.os }}-${{ matrix.arch }}-dependencies-${{ hashFiles('.github/workflows/wasm.yml') }}
+
       - name: Install dependencies
         run: |
           source ~/emsdk/emsdk_env.sh
           vcpkg integrate install
           vcpkg install curl:wasm32-emscripten
-          vcpkg install glew:wasm32-emscripten
           vcpkg install libogg:wasm32-emscripten
           vcpkg install libvorbis:wasm32-emscripten
           vcpkg install openal-soft:wasm32-emscripten
