--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -83,6 +83,7 @@ jobs:
           # TODO: Re-add -DWERROR=ON when warnings will be fixed
           emcmake cmake .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DWARNINGS=ON \
                            -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake \
+                           -DVCPKG_CHAINLOAD_TOOLCHAIN_FILE=~/emsdk/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake \
                            -DVCPKG_TARGET_TRIPLET=wasm32-emscripten
 
       - name: Sync data folder
