--- a/external/SDL_SavePNG/CMakeLists.txt
+++ b/external/SDL_SavePNG/CMakeLists.txt
@@ -2,5 +2,10 @@ project(SDL_SavePNG)
 
 add_library(SDL_SavePNG OBJECT ${PROJECT_SOURCE_DIR}/savepng.c)
 set_target_properties(SDL_SavePNG PROPERTIES POSITION_INDEPENDENT_CODE ON)
-target_link_libraries(SDL_SavePNG PUBLIC SDL2 PNG)
+if(EMSCRIPTEN)
+  target_compile_options(SDL_SavePNG PUBLIC -sUSE_SDL=2)
+else()
+  target_link_libraries(SDL_SavePNG PUBLIC SDL2)
+endif()
+target_link_libraries(SDL_SavePNG PUBLIC PNG)
 target_include_directories(SDL_SavePNG PUBLIC ${PROJECT_SOURCE_DIR})
