--- a/mk/clickable/clickable-glew.yaml
+++ b/mk/clickable/clickable-glew.yaml
@@ -14,9 +14,10 @@ dependencies_target:
   - "libopenal-dev"
   - "libsdl2-dev"
   - "libsdl2-image-dev"
-  - "libsdl2-ttf-dev"
   - "libphysfs-dev"
   - "libcurl4-openssl-dev"
+  - "libfreetype6-dev"
+  - "libraqm-dev"
   - "libglew-dev"
   - "libglm-dev"
   - "zlib1g-dev"
@@ -29,8 +30,8 @@ install_lib:
   - "/usr/lib/${ARCH_TRIPLET}/libSDL2-2.0.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libSDL2_image.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libSDL2_image-2.0.so*"
-  - "/usr/lib/${ARCH_TRIPLET}/libSDL2_ttf.so*"
-  - "/usr/lib/${ARCH_TRIPLET}/libSDL2_ttf-2.0.so*"
+  - "/usr/lib/${ARCH_TRIPLET}/libfreetype.so*"
+  - "/usr/lib/${ARCH_TRIPLET}/libraqm.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libcurl.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libGLEW.so*"
   - "/usr/lib/${ARCH_TRIPLET}/libasound.so*"
